--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "lerna": "^3.4.3"
+  }
 }
