--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es2015"
+    ],
     "module": "commonjs",
     "declaration": true,
     "noImplicitAny": false,
