--- a/packages/server/tsconfig.spec.json
+++ b/packages/server/tsconfig.spec.json
@@ -1,6 +1,9 @@
 {
-  "extends": "tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "lib": [
+      "es2015"
+    ],
     "types": ["jest", "node"]
   },
   "include": ["**/*.spec.ts", "**/*.d.ts"]
