--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -2,8 +2,9 @@ FROM node:latest
 
 ENV NPM_CONFIG_LOGLEVEL notice
 
-# Add the remaining project files
-ADD . .
+WORKDIR /usr/src/app
+
+ADD . ./
 
 RUN npm i
 
@@ -11,7 +12,4 @@ ENV HOST 0.0.0.0
 ENV PORT 3000
 EXPOSE 3000
 
-# Build distribution
-RUN npm run dev
-
-CMD npm run dev
+ENTRYPOINT npm run start:dev
