--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "npmClient": "yarn",
-  "useWorkspaces": true,
+  "useWorkspaces": false,
   "lerna": "2.5.1",
   "version": "independent",
   "packages": [
