--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -18,10 +18,10 @@
     "baseUrl": "./src"
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "**/*.spec.ts"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
