--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,7 +26,10 @@
     "@nestjs/passport": "^5.1.0",
     "@nestjs/typeorm": "^5.2.2",
     "dotenv": "^6.1.0",
+    "geolib": "^2.0.24",
     "ical-generator": "^1.3.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
@@ -40,6 +43,7 @@
     "@nestjs/testing": "^5.4.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
