Changed repo layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-/.idea
-/.history
-/.vscode
-/.cache
-.tmp
+.env
 node_modules
-build
-.expo
-*.log
-*.sqlite3
-.DS_Store
-jsconfig.json
-public
-*.iml
-.idea/jubilapp.iml
-.idea/misc.xml
-.idea/modules.xml
 .idea/workspace.xml
+.idea
