--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
+    "@nestjs/cli": "^5.7.1",
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/jwt": "^0.2.0",
     "@nestjs/passport": "^5.1.0",
     "@nestjs/typeorm": "^5.2.2",
     "dotenv": "^6.1.0",
+    "expo-server-sdk": "^3.1.0",
     "geolib": "^2.0.24",
     "ical-generator": "^1.3.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "node-schedule": "^1.3.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
