--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^0.2.0",
     "@nestjs/passport": "^5.1.0",
     "@nestjs/typeorm": "^5.2.2",
+    "@types/mathjs": "^4.4.4",
     "dotenv": "^6.1.0",
     "expo-server-sdk": "^3.1.0",
     "geolib": "^2.0.24",
     "ical-generator": "^1.3.0",
     "lodash": "^4.17.11",
+    "mathjs": "^5.4.0",
     "moment": "^2.22.2",
     "node-schedule": "^1.3.1",
     "passport": "^0.4.0",
