--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^7.5.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "sort-by": "^1.2.0",
     "typeorm": "^0.2.8",
     "typescript": "^3.0.1"
   },
